--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,12 +1,38 @@
 * {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Open Sans",sans-serif,arial;
   }
 
 body {
-    background-color: black;
+    background-color: #1E3F65;
 }
 
 .banner-text {
     text-align: center;
     color: white;
+    text-shadow: 2px 2px rgba(0, 0, 0, 0.2)
+}
+
+.question-block {
+    width: 600px;
+    margin: 5px auto;
+    border: 1px solid #B22418;
+    border-radius: 20px;
+    padding: 5px 20px 15px 20px;
+    background-color: white;
+    /* box-shadow: [horizontal offset] [vertical offset] [blur radius] [optional spread radius] [color]; */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.answer-block {
+    width: 400px;
+    margin: auto;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+}
+
+.answer-option {
+    flex-grow: 1;
+    width: 60px;
+    margin-right: auto;
 }
