--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -58,3 +58,20 @@ body {
     height: 20px;
     margin-top: 10px;
 }
+
+.central-block {
+    text-align: center;
+}
+
+.gutter-bottom-30 {
+    margin-bottom: 30px;
+}
+
+.gutter-bottom-10 {
+    margin-bottom: 10px;
+}
+
+.font16 {
+    font-size: 16px;
+}
+
