--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -9,7 +9,8 @@ body {
 .banner-text {
     text-align: center;
     color: white;
-    text-shadow: 2px 2px rgba(0, 0, 0, 0.2)
+    text-shadow: 2px 2px rgba(0, 0, 0, 0.2);
+    margin-top: 125px;
 }
 
 .question-block {
