--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,46 +1,60 @@
 * {
     font-family: "Open Sans",sans-serif,arial;
+    font-weight: normal;
 }
 
 body {
-    background-color: white;
+    background-color: #F7F7F7;
+    padding: 0;
+    margin: 0;
+}
+
+.divider {
+    height: 7px;
+    background-color: #19558C;
+    width: 100%;
+    margin-top: 20px;
+    padding: 0px;
+}
+
+.bold {
+    font-weight: bold;
 }
 
 .banner-text {
     text-align: center;
-    color: black;
-    text-shadow: 2px 2px rgba(0, 0, 0, 0.2);
-    margin-top: 125px;
+    color: #565656;
+    margin-top: 75px;
+    font-size: 30px;
 }
 
 .question-block {
     width: 600px;
-    margin: 5px auto;
-    border: 1px solid #B22418;
+    margin: 5px auto 60px auto;
+    border: 1px solid #B8202E;
     border-radius: 20px;
     padding: 20px;
     background-color: #F8F8F8;
+    color: #565656;
     /* box-shadow: [horizontal offset] [vertical offset] [blur radius] [optional spread radius] [color]; */
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .answer-block {
-    width: 500px;
-    margin: auto;
     display: flex;
     flex-wrap: nowrap;
-    justify-content: space-between;
+    justify-content: space-around;
+    margin-bottom: 30px;
 }
 
 .answer-option {
-    flex-grow: 1;
-    margin-right: auto;
+
 }
 
 .next-q-button {
     float: right;
     box-shadow: rgb(207, 134, 108) 0px 1px 0px 0px inset;
-    background: #BA0000;
+    background: #B8202E;
     border-radius: 3px;
     border: 1px solid rgb(148, 41, 17);
     display: inline-block;
@@ -56,7 +70,7 @@ body {
 .back-button {
     float: left;
     box-shadow: black 0px 1px 0px 0px inset;
-    background: black;
+    background: #1C1C1C;
     border-radius: 3px;
     border: 1px solid black;
     display: inline-block;
@@ -93,5 +107,13 @@ body {
 
 .font16 {
     font-size: 16px;
+}
+
+.bottom-banner {
+    height: 50px;
+    background-color: #19558C;
+    width: 100%;
+    bottom: 0;
+    position: fixed;
 }
 
