--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -21,6 +21,10 @@ body {
     font-weight: bold;
 }
 
+.monospace {
+    font-family: monospace;
+}
+
 .banner-text {
     text-align: center;
     color: #565656;
@@ -110,4 +114,3 @@ body {
     bottom: 0;
     position: fixed;
 }
-
